# orchestra_ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  blueprint.py  brain_client.py  conductor.py  evaluation.py  factory.py  implementation.py  learning.py  manifest.py  metrics.py  models.py  optimization.py  planning.py  predictive.py  repair.py  runtime_validation.py  sandbox_manager.py  session_adapter.py  skill_loader.py  state_machine.py  tool_manager.py
app/: main.py
app/core/: auth.py  config.py  logging.py
app/dependencies/: __init__.py  auth.py  rate_limiter.py
app/routers/: auth.py
app/schemas/: project.py
app/services/: project_service.py  task_runner.py
billing/: billing_service.py  cost_model.py  quota_manager.py  rate_limiter.py  usage_tracker.py
brain/: config.py  database.py  main.py
brain/models/: postgres_models.py
brain/repository/: base.py  json_repo.py  postgres_repo.py
brain/routers/: agents.py  audit.py  (+5 more)
config/: docker.env
job_queue/: __init__.py  job_manager.py  redis_client.py  task_queue.py
mcp/: brain_server.py
observability/: event_logger.py  metrics_collector.py  span_manager.py  trace_store.py  tracer.py
scripts/: build_docker.ps1  build_docker.sh
tests/: test_agent_framework.py  test_api_wrapper.py  test_async_queue.py  test_auth_system.py  test_billing_and_quota.py  test_brain.py  test_brain_postgres.py  test_conductor_integration.py  test_docker_sandbox.py  test_evaluation_agent.py  test_learning_agent.py  test_observability.py  test_optimization_agent.py  test_predictive_agent.py  test_repair_agent.py
workers/: __init__.py  conductor_worker.py  sandbox_worker.py
(+33 files in other folders)
