[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestra-ai"
version = "0.1.0"
description = "Orchestra AI: An AI Engineering Studio that transforms product ideas into engineering blueprints using collaborating AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Kaggle Capstone Team", email = "team@orchestra.ai" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "google-genai>=0.1.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "redis>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "agents*", "skills*", "mcp*", "job_queue*", "workers*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov=agents --cov=mcp"
testpaths = [
    "tests"
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
ignore = []
